src/test/resources/de/uni_luebeck/isp/tessla/interpreter/tests/errors/duplicate-definitions.tessla
in x: Events[Int]
in x: Events[Int]

def y := 42
def y := 42
def y := 42